# cards

./: README.md  cards.cabal  package.yaml
app/: Main.hs
benchmark/: Main.hs
src/: Card.hs  Holdem.hs  Lib.hs
src/Holdem/: Evaluate.hs  Table.hs
src/Holdem/Table/: DP.hs  Flush.hs  NoFlush.hs  Suit.hs
src/Poker/Holdem/: Evaluate.hs  Simulate.hs
test/: Spec.hs
test/evaluate/: EvaluateSpec.hs
